--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/index.css">
   <title>foxing css</title>
 </head>
 <body>
-  
+  <h1><a href="/">Hello World</a></h1>
 </body>
 </html>
