--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>foxing css</title>
 </head>
 <body>
-  <h1><a href="/">Hello World</a></h1>
+  <!-- <h1>Hello Worl</h1>
+  <h1><a href="/">Hello Worl</a></h1> -->
+  <div class="main">test</div>
+  <div class="primary">test</div>
+  <div class="secondary">test</div>
+  <div class="error">test</div>
+  <div class="info">test</div>
+  <div class="party">test</div>
 </body>
 </html>
