--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
   <title>foxing css</title>
 </head>
 <body>
-  <!-- <h1>Hello World</h1>
-  <h1><a href="/">Hello World</a></h1> -->
-  <div class="main">test</div>
-  <div class="primary">test</div>
-  <div class="secondary">test</div>
-  <div class="error">test</div>
-  <div class="info">test</div>
-  <div class="party">test</div>
-  <button class="button-primary">Input</button>
+  <div class="container">
+    <div class="main">test</div>
+    <hr>
+    <div class="primary">test</div>
+    <hr>
+    <div class="secondary">test</div>
+    <hr>
+    <div class="error">test</div>
+    <hr>
+    <div class="info">test</div>
+    <hr>
+    <div class="party">test</div>
+    <hr>
+    <p>testing</p>
+    <button class="button-primary">Input</button>
+  </div> 
+    <!-- <h1>Hello World</h1>
+    <h1><a href="/">Hello World</a></h1> -->
 </body>
 </html>
