build out file structure

--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 </head>
 <body>
   <div class="container">
-    <div class="main">test</div>
-    <hr>
-    <div class="primary">test</div>
-    <hr>
-    <div class="secondary">test</div>
-    <hr>
-    <div class="error">test</div>
-    <hr>
-    <div class="info">test</div>
-    <hr>
-    <div class="party">test</div>
-    <hr>
-    <p>testing</p>
-    <button class="button-primary">Input</button>
-  </div> 
-    <!-- <h1>Hello World</h1>
-    <h1><a href="/">Hello World</a></h1> -->
+    <!-- components -->
+    
+    <!-- buttons -->
+
+    <!-- card -->
+      <div class="card">
+        <h1 class="card-title"> Testing.
+          <p class="card-body"> 
+            <a href="/">HOME</a> This is a link for home. 
+          </p>
+        </h1>
+      </div>
+
+    <!-- grid system -->
+
+    <!-- utilities -->
+
+  </div>
 </body>
 </html>
