build out card component

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- card -->
       <div class="card">
         <h1 class="card-title"> Testing.
+          <hr class="card-hr">
           <p class="card-body"> 
             <a href="/">HOME</a> This is a link for home. 
           </p>
