add components content and more utilities

--- a/index.html
+++ b/index.html
@@ -5,28 +5,94 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/index.css">
-  <title>foxing css</title>
+  <title>foxingcss</title>
 </head>
 <body>
-  <div class="container">
+  <nav class="navbar-dark text-light-light-4 mb-4">
+    <div class="container">
+      <h2 class="site-title"><a href='/'>foxing css</a></h2>
+      <p>css for the nostalgic and worried</p>
+      <ul>
+        <li><a href='/'>Home</a></li>
+        <li><a href='https://www.google.com' target="_blank">Google</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-flex">
+    <h1 class="header" style="text-align: center; padding: 2rem;">foxing css</h1>
+    <h4 style="text-align: center; padding: 2rem;">CSS for the nostalgic and worried</h4>
+    <!-- colors -->
+    <h2 class="mb-2">Colors</h2>
+    <span class="text-base bg-dark">base</span> |
+    <span class="text-main">main</span> |
+    <span class="text-primary">primary</span> |
+    <span class="text-secondary">secondary</span> |
+    <span class="text-success">success</span> |
+    <span class="text-error">error</span> |
+    <br><br>
+    <span class="text-warning">warning</span> |
+    <span class="text-info">info</span> |
+    <span class="text-party">party</span> |
+    <span class="text-light bg-dark">light</span> |
+    <span class="text-dark">dark</span> |
+    <span class="text-white bg-dark">white</span> |
+    <span class="text-black">black</span> |
+    <br><br>
     <!-- components -->
-    
-    <!-- buttons -->
 
-    <!-- card -->
+    <!-- font sizes -->
+
+    <!-- buttons -->
+    <h2 class="mb-2">Buttons</h2>
+    <div class="btn">Default</div>
+    <button class="btn-primary text-text-dark">Primary</button>
+    <button class="btn-secondary text-light-light-5">Secondary</button>
+    <button class="btn-info text-light-light-5">Info</button>
+    <button class="btn-outlined-party text-text text-hover-light-light-1">Party Outlined</button>
+    <button class="btn-outlined-warning text-dark text-hover-light-light-1">Warning Outlined</button>
+    <button class="btn-complement-party">Party Active</button>
+    <button class="btn-complement-primary">Primary Active</button>
+
+    <hr class="mt-4 mb-4">
+    <!-- cards -->
       <div class="card">
-        <h1 class="card-title"> Testing.
-          <hr class="card-hr">
+        <h1 class="card-title"> Cards
           <p class="card-body"> 
-            <a href="/">HOME</a> This is a link for home. 
+            This is a link for <a href="/">home</a>
           </p>
         </h1>
       </div>
-
     <!-- grid system -->
-
+    <h2 class="mb-2 ml-1 mt-3">Flex-Grid</h2>
+      <div class="row-flex gap-1 justify-center">
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+      </div>
     <!-- utilities -->
 
+    <!-- tests -->
   </div>
 </body>
 </html>
