--- a/index.html
+++ b/index.html
@@ -8,10 +8,158 @@
     <title>foxingcss</title>
   </head>
   <body class="bg-base-light-4">
-    <h1 class="text-center mt-2">
-      foxing css
-      <h5 class="text-center mb-1">CSS for the nostalgic and worried</h5>
-    </h1>
+    <div class="mt-3">
+      <img src="./img/foxingmasthead.png" alt="masthead" width="1200px" />
+    </div>
+    <h3 class="text-center mt-2">css for the nostalgic and worried</h3>
+    <hr class="line" />
+    <div class="container mt-1 mb-1">
+      <p>
+        Created by jake edgar using scss to add a concise style to his capstone project at Epicodus, the library will be launched as an open source project in the coming weeks so that coders from all
+        over can help improve on the work and make something really special, maybe.
+      </p>
+      <br />
+      <p>Check out some of what we have so far!</p>
+    </div>
+    <div class="container-flex">
+      <hr class="line" />
+      <!-- colors -->
+      <h2 class="mb-2 ml-1 mt-3 text-center">Colors</h2>
+      <div class="text-center">
+        <strong
+          ><span class="text-base bg-black">base</span> | <span class="text-main">main</span> | <span class="text-primary">primary</span> | <span class="text-secondary">secondary</span> |
+          <span class="text-success">success</span> | <span class="text-error">error</span> | <br /><br />
+          <span class="text-warning">warning</span> | <span class="text-info">info</span> | <span class="text-party">party</span> | <span class="text-light bg-dark">light</span> |
+          <span class="text-dark">dark</span> | <span class="text-white bg-dark">white</span> | <span class="text-black">black</span> | </strong
+        ><br /><br />
+      </div>
+
+      <!-- buttons -->
+      <hr class="line" />
+      <div class="text-center mb-2">
+        <h2 class="mb-2 ml-1 mt-3 text-center">Buttons</h2>
+        <button class="btn">Default</button>
+        <button class="btn-primary text-text-dark">Primary</button>
+        <button class="btn-secondary text-light-light-5">Secondary</button>
+        <button class="btn-info text-light-light-5">Info</button>
+        <button class="btn-success text-light-light-5">Success</button>
+        <button class="btn-outlined-party text-text text-hover-light-light-1">Party Outlined</button>
+        <button class="btn-outlined-warning text-dark text-hover-light-light-1">Warning Outlined</button>
+        <button class="btn-complement-party">Party Active</button>
+        <button class="btn-complement-primary">Primary Active</button>
+        <button class="btn-complement-dark">Dark Active</button>
+      </div>
+      <hr class="line" />
+      <!-- components -->
+      <h2 class="mb-2 ml-1 mt-3 text-center">Forms of many sizes!</h2>
+      <div class="container-flex">
+        <input type="textarea" class="field-width-1 field-depth-1" placeholder="sm size" />
+        <br />
+        <input type="textarea" class="field-width-3 field-depth-3" placeholder="md size" />
+        <br />
+        <input type="textarea" class="field-width-max field-depth-max" placeholder="max size" />
+      </div>
+      <br />
+      <hr class="line" />
+      <h4 class="text-center mt-1 mb-1">We've got checkboxes!!</h4>
+      <div class="container">
+        <label class="container-check"
+          >Checkbox Secondary
+          <input type="checkbox" checked="checked" />
+          <span class="checkmark-secondary"></span>
+        </label>
+        <label class="container-check"
+          >Checkbox Primary
+          <input type="checkbox" checked="checked" />
+          <span class="checkmark-primary"></span>
+        </label>
+        <label class="container-check"
+          >Checkbox Error & Disabled
+          <input type="checkbox" disabled />
+          <span class="checkmark-error"></span>
+        </label>
+      </div>
+      <br />
+      <hr class="line" />
+      <h4 class="text-center mt-1 mb-1">We've got radio buttons!!</h4>
+      <div class="container">
+        <label class="radio-container"
+          >One
+          <input type="radio" checked="checked" name="radio" />
+          <span class="checkmark"></span>
+        </label>
+        <label class="radio-container"
+          >Two
+          <input type="radio" name="radio" />
+          <span class="checkmark"></span>
+        </label>
+        <label class="radio-container"
+          >Three
+          <input type="radio" name="radio" />
+          <span class="checkmark"></span>
+        </label>
+        <label class="radio-container"
+          >Four
+          <input type="radio" name="radio" />
+          <span class="checkmark"></span>
+        </label>
+      </div>
+      <!-- font sizes -->
+
+      <!-- cards -->
+      <h2 class="mb-2 ml-1 mt-2 text-center">Cards</h2>
+      <hr class="line" />
+      <div class="container mt-2 mb-2">
+        <div class="card">
+          <h2 class="card-title">
+            Card title
+            <p class="card-body">
+              Click <a href="/"><em>Home</em></a> to go home.
+            </p>
+          </h2>
+        </div>
+      </div>
+      <!-- grid system -->
+      <hr class="line" />
+      <h2 class="mb-2 ml-1 mt-3 text-center">Flex-Grid</h2>
+      <div class="row-flex gap-1 justify-center mb-2">
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hi Mom</h3>
+            <p class="card-body">This is my new grid system. Seems so cool, right?</p>
+          </div>
+        </div>
+      </div>
+      <hr class="line" />
+      <br />
+      <h2 class="mb-4 ml-1 mt-3 text-center">Box</h2>
+      <div class="container">
+        <div class="box">
+          <div class="box-inner">This is a hecka fancy box. And: This is what you would put on the inside of your really amazing box.</div>
+        </div>
+      </div>
+      <!-- utilities -->
+      <!-- tests -->
+    </div>
+    <h2 class="mb-2 ml-1 mt-3 text-center">NavBars!</h2>
     <nav class="navbar-dark text-light-light-4 mb-1">
       <div class="container">
         <h2 class="site-title"><a href="/">foxing css</a></h2>
@@ -24,7 +172,7 @@
     </nav>
     <nav class="navbar-hero-info text-base-light-4 mb-1">
       <div class="container">
-        <h2 class="site-title"><a href="/">foxing css</a></h2>
+        <h2 class="site-title pr-1"><a href="/">foxing css</a></h2>
         <p>navbar-hero</p>
         <ul>
           <li><a href="/">Home</a></li>
@@ -34,7 +182,7 @@
     </nav>
     <nav class="navbar-hero-big-primary text-dark-dark-4 mb-4">
       <div class="container">
-        <h2 class="site-title"><a href="/">foxing css</a></h2>
+        <h2 class="site-title pr-2"><a href="/">foxing css</a></h2>
         <p>navbar-hero-big</p>
         <ul>
           <li><a href="/">Home</a></li>
@@ -42,122 +190,5 @@
         </ul>
       </div>
     </nav>
-    <div class="container-flex">
-      <!-- colors -->
-      <h2 class="mb-2">Colors</h2>
-      <span class="text-base bg-dark">base</span> |
-      <span class="text-main">main</span> |
-      <span class="text-primary">primary</span> |
-      <span class="text-secondary">secondary</span> |
-      <span class="text-success">success</span> |
-      <span class="text-error">error</span> | <br /><br />
-      <span class="text-warning">warning</span> |
-      <span class="text-info">info</span> |
-      <span class="text-party">party</span> |
-      <span class="text-light bg-dark">light</span> |
-      <span class="text-dark">dark</span> |
-      <span class="text-white bg-dark">white</span> |
-      <span class="text-black">black</span> | <br /><br />
-      <!-- components -->
-      <h2 class="mb-2">Forms and Inputs:</h2>
-      <div class="container-flex">
-        <input
-          class="textfield field-width-1 field-depth-1"
-          placeholder="sm size"
-        />
-        <br />
-        <input
-          class="textfield field-width-3 field-depth-3"
-          placeholder="md size"
-        />
-        <br />
-        <input
-          class="textfield field-width-max field-depth-max"
-          placeholder="max size"
-        />
-      </div>
-      <!-- font sizes -->
-      <br /><br />
-      <!-- buttons -->
-      <h2 class="mb-2">Buttons</h2>
-      <div class="btn">Default</div>
-      <button class="btn-primary text-text-dark">Primary</button>
-      <button class="btn-secondary text-light-light-5">Secondary</button>
-      <button class="btn-info text-light-light-5">Info</button>
-      <button class="btn-success text-light-light-5">Success</button>
-      <button class="btn-outlined-party text-text text-hover-light-light-1">
-        Party Outlined
-      </button>
-      <button class="btn-outlined-warning text-dark text-hover-light-light-1">
-        Warning Outlined
-      </button>
-      <button class="btn-complement-party">Party Active</button>
-      <button class="btn-complement-primary">Primary Active</button>
-      <button class="btn-complement-dark">Dark Active</button>
-
-      <hr class="mt-4 mb-4" />
-      <!-- cards -->
-      <div class="card">
-        <h1 class="card-title">
-          Cards
-          <p class="card-body">
-            Click <a href="/"><em>Home</em></a> to go home.
-          </p>
-        </h1>
-      </div>
-      <!-- grid system -->
-      <h2 class="mb-2 ml-1 mt-3">Flex-Grid</h2>
-      <div class="row-flex gap-1 justify-center">
-        <div class="col-12-xs col-5-sm col-3-xl">
-          <div class="card">
-            <h3 class="card-title">Hi Mom</h3>
-            <p class="card-body">
-              This is my new grid system. Seems so cool, right?
-            </p>
-          </div>
-        </div>
-        <div class="col-12-xs col-5-sm col-3-xl">
-          <div class="card">
-            <h3 class="card-title">Hi Mom</h3>
-            <p class="card-body">
-              This is my new grid system. Seems so cool, right?
-            </p>
-          </div>
-        </div>
-        <div class="col-12-xs col-5-sm col-3-xl">
-          <div class="card">
-            <h3 class="card-title">Hi Mom</h3>
-            <p class="card-body">
-              This is my new grid system. Seems so cool, right?
-            </p>
-          </div>
-        </div>
-        <div class="col-12-xs col-5-sm col-3-xl">
-          <div class="card">
-            <h3 class="card-title">Hi Mom</h3>
-            <p class="card-body">
-              This is my new grid system. Seems so cool, right?
-            </p>
-          </div>
-        </div>
-      </div>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <div class="container">
-        <div class="box">
-          <div class="box-inner">
-            This is a hecka fancy box. And: This is what you would put on the
-            inside of your really amazing box.
-          </div>
-        </div>
-      </div>
-
-      <!-- utilities -->
-
-      <!-- tests -->
-    </div>
   </body>
 </html>
