--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <hr class="line" />
     <div class="container mt-1 mb-1">
       <p>
-        Created by jake edgar using scss to add a concise style to his capstone project at Epicodus, the library will be launched as an open source project in the coming weeks so that coders from all
-        over can help improve on the work and make something really special, maybe.
+        Created by jake edgar using scss to add a concise style to his capstone project at Epicodus. The library will be launched as an open source project in the coming weeks so that coders from all
+        over can help improve on the work and make something useful, maybe.
       </p>
       <br />
-      <p>Check out some of what we have so far!</p>
+      <p>Check it ooouttt!!!</p>
     </div>
     <div class="container-flex">
       <hr class="line" />
