update form mechanics

--- a/index.html
+++ b/index.html
@@ -48,16 +48,21 @@
         <button class="btn-complement-party">Party Active</button>
         <button class="btn-complement-primary">Primary Active</button>
         <button class="btn-complement-dark">Dark Active</button>
+        <button class="btn-simple">Simple Style</button>
       </div>
       <hr class="line" />
       <!-- components -->
-      <h2 class="mb-2 ml-1 mt-3 text-center">Forms of many sizes!</h2>
+      <h2 class="mb-2 ml-1 mt-3 text-center">Responsive Forms of many sizes!</h2>
       <div class="container-flex">
         <input type="textarea" class="field-width-1 field-depth-1" placeholder="sm size" />
         <br />
-        <input type="textarea" class="field-width-3 field-depth-3" placeholder="md size" />
+        <input type="textarea" class="field-width-2 field-depth-3" placeholder="md size" />
         <br />
-        <input type="textarea" class="field-width-max field-depth-max" placeholder="max size" />
+        <input type="textarea" class="field-width-3 field-depth-5" placeholder="lg size" />
+        <br />
+        <input type="textarea" class="field-width-5 field-depth-7" placeholder="xl size" />
+        <br />
+        <input type="textarea" class="field-width-full field-depth-10" placeholder="max size" />
       </div>
       <br />
       <hr class="line" />
